--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/oslo.vmware
 Source0:        https://pypi.io/packages/source/o/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
+#FIXME(jpena): remove patch once it is fixed upstream (https://review.openstack.org/355851)
+Patch0001:      0001-Make-the-mock-call-in-MemoryCacheTest-forward-compat.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('devel') }}
@@ -59,7 +61,7 @@ Requires:       %{name} = %{version}
 Documentation for OpenStack common VMware library.
 
 %prep
-%autosetup -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version} -p1
 %py_req_cleanup
 
 %build
