Fixes for newer renderspec release
The license context function was removed, adjust templates

Change-Id: I2b9112598312a69702e6f0b294530a33e72e0ff0

--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -4,7 +4,7 @@ Name:           {{ py2name('keystoneauth1') }}
 Version:        2.2.0
 Release:        0
 Summary:        OpenStack authenticating tools
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
