--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -5,7 +5,7 @@ Name:           {{ py2name('os-client-config') }}
 Version:        1.16.0
 Release:        0
 Summary:        OpenStack Client Configuration Library
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Devexslopment/Libraries
 URL:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
