--- a/openstack/os-testr/os-testr.spec.j2
+++ b/openstack/os-testr/os-testr.spec.j2
@@ -3,7 +3,7 @@ Name:           {{ py2name('os-testr') }}
 Version:        0.6.0
 Release:        0
 Summary:        A testr wrapper to provide functionality for OpenStack projects
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://www.openstack.org/
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
