--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -4,7 +4,7 @@ Name:           {{ py2name('oslo.cache') }}
 Version:        1.6.0
 Release:        0
 Summary:        Cache storage for Openstack projects
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            http://launchpad.net/oslo
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
