--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -5,7 +5,7 @@ Version:       2.4.0
 Release:       0
 Summary:       OpenStack serialization library
 Group:         Development/Languages
-License:       {{ 'Apache-2.0' | license }}
+License:       {{ license('Apache-2.0') }}
 Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
