--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -16,7 +16,7 @@ Name:           {{ py2name('oslotest') }}
 Version:        2.4.0
 Release:        0
 Summary:        OpenStack test framework
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/oslotest
 Source0:        https://pypi.io/packages/source/o/oslotest/oslotest-%{version}.tar.gz
