--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -4,7 +4,7 @@ Name:           {{ py2name('oslo.policy') }}
 Version:        1.6.0
 Release:        0
 Summary:        OpenStack Oslo Policy library
-License:        {{ 'Apache-2.0' | license }}
+License:        {{ license('Apache-2.0') }}
 URL:            https://launchpad.net/%sname
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
