--- a/openstack/openstack-macros/openstack-macros.spec.j2
+++ b/openstack/openstack-macros/openstack-macros.spec.j2
@@ -2,7 +2,7 @@
 %global rdo 1
 %endif
 Name:           openstack-macros
-Version:        2017.1.3
+Version:        2017.1.4
 Release:        0
 Summary:        OpenStack Packaging - RPM Macros
 License:        {{ license('Apache-2.0') }}
@@ -12,6 +12,12 @@ Source0:        macros.openstack-common
 Source1:        macros.openstack-suse
 Source2:        macros.openstack-rdo
 BuildArch:      noarch
+%if 0%{?rdo}
+Obsoletes:     rdo-rpm-macros <= 1-3
+# Fake NVR to avoid dealing with epochs
+# just bump release field
+Provides:      rdo-rpm-macros = 1-4
+%endif
 
 %description
 This package provides OpenStack RPM macros. You need it to build OpenStack
