Support default-config-dirs with oslo.config
This is a backport from oslo.config master (see
I4df977911539777d1510e8b579375aca5b5f15f4) to support default
config directories.
This is needed because some projects switched to only support WSGI
environment and with that it is no longer possible to add custom
--config-dir parameters when starting the service.

Note: This patch will automatically land in master with the next
oslo.config release. That's why this is not a cherry-pick from master.

Change-Id: If12d8fe7b7a8bdfa47a805db892ef03a94e4a737

--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -8,6 +8,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# 0001-Add-defaults-for-config-dir.patch -- backport for master to support default config dirs
+Patch1:         0001-Add-defaults-for-config-dir.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('debtcollector') }}
 BuildRequires:  {{ py2pkg('devel') }}
@@ -51,6 +53,7 @@ Documentation for the oslo-config library.
 
 %prep
 %setup -q -n %{sname}-%{version}
+%patch1 -p1
 
 %build
 %{py2_build}
