Update oslo.i18n to 3.11.0
Change-Id: I89a608920d34d7624a49f723cc5006842699ab5e
Depends-on: I8f38dbb2f98d70bd2f2f7a3dd40954f2b0cde78f

--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.i18n
 Name:           {{ py2name('oslo.i18n') }}
-Version:        3.10.0
+Version:        3.11.0
 Release:        0
 Summary:        OpenStack i18n library
 License:        {{ license('Apache-2.0') }}
@@ -12,6 +12,7 @@ BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('testscenarios') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
