Add 0001-Deal-with-CONF.config_dir-correctly.patch to oslo.privsep
This is needed to handle the --config-dir switch correctly.

Change-Id: Ic4fd454a39f6f5de9d857dbd640c661b5d4e9cdb

--- a/openstack/oslo.privsep/oslo.privsep.spec.j2
+++ b/openstack/oslo.privsep/oslo.privsep.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/oslo.privsep
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# 0001-Deal-with-CONF.config_dir-correctly.patch -- https://review.openstack.org/#/c/405544/
+Patch1:         0001-Deal-with-CONF.config_dir-correctly.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
@@ -48,6 +50,7 @@ Documentation for oslo.privsep
 
 %prep
 %setup -q -n %{sname}-%{version}
+%patch1 -p1
 
 %build
 %py2_build
