--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -21,9 +21,9 @@ Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('msgpack-python') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
-Requires:       {{ py2pkg('retrying') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
+Requires:       {{ py2pkg('tenacity') }}
 Requires:       {{ py2pkg('voluptuous') }}
 Requires:       {{ py2pkg('zake') }}
 BuildArch:      noarch
