--- a/openstack/automaton/automaton.spec.j2
+++ b/openstack/automaton/automaton.spec.j2
@@ -1,6 +1,6 @@
 %global sname automaton
-Name:           {{ py2name('%{sname}') }}
-Version:        1.5.0
+Name:           {{ py2name('automaton') }}
+Version:        1.6.0
 Release:        0
 Summary:        Friendly state machines for python
 License:        {{ license('Apache-2.0') }}
