Update python-watcherclient to 0.27.0
Change-Id: Icb61e0e54c0f446862f4bc98ea654868690eb563
Depends-on:If0c85ca24ed1ae16801fa4aac29ae583c6e84f97

--- a/openstack/python-watcherclient/python-watcherclient.spec.j2
+++ b/openstack/python-watcherclient/python-watcherclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-watcherclient') }}
-Version:        0.26.0
+Version:        0.27.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Watcher
 License:        {{ license('Apache-2.0') }}
@@ -8,6 +8,7 @@ Url:            http://launchpad.net/%{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
+BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('cliff') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
@@ -25,6 +26,7 @@ BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PrettyTable') }}
+Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('cliff') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('osc-lib') }}
