--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Patch0:         0001-s390x-iscsi-support-enablement.patch
+Patch1:         0001-Fix-unittest-run-on-s390x-host.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('castellan') }}
@@ -69,6 +71,8 @@ This package contains the documentation.
 
 %prep
 %setup -q -n %{sname}-%{version}
+%patch0 -p1
+%patch1 -p1
 
 %build
 %{py2_build}
