Replace patch with sed in XStatic-angular-ui-router template
The setup.py file in the XStatic-angular-ui-router PyPi distribution
differs from the one in the git repo. DLRN uses the latter, so it
fails to build the package.

Changing the patch for a couple of sed
lines achieves the same result, and gives us more flexibility if
needed for future releases (no need to update the patch).

Change-Id: I70ef42d340758b12ed2e2f6821ab6773b3e21555

--- a/openstack/XStatic-angular-ui-router/XStatic-angular-ui-router.spec.j2
+++ b/openstack/XStatic-angular-ui-router/XStatic-angular-ui-router.spec.j2
@@ -7,7 +7,6 @@ License:        {{ license('MIT') }}
 Group:          Development/Languages/Python
 Url:            https://git.openstack.org/cgit/openstack/{sname}/
 Source0:        https://pypi.io/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
-Patch0:         no-wheel.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
@@ -19,6 +18,8 @@ angular-ui-router javascript library packaged for setuptools (easy_install) / pi
 
 %prep
 %autosetup -n %{sname}-%{version}
+sed -i 's/    setup_requires/#   setup_requires/' setup.py
+sed -i '/name=.*/a \ \ \ \ version="0.3.1.2",' setup.py
 %py_req_cleanup
 
 %build
