Use py2rpmversion for Bareon version and release
Previously, we were using a tilde (~) char as a separator with the
pre-release version. We can now use py2rpmversion, as described in
https://review.openstack.org/384622

Change-Id: Ic5718f4e6e3b2730d70e7c2614811b7e9df17826

--- a/openstack/Bareon/Bareon.spec.j2
+++ b/openstack/Bareon/Bareon.spec.j2
@@ -1,9 +1,11 @@
 %global pypi_name Bareon
 %global sname bareon
 %global sversion 0.0.1a3
+{% set upstream_version = '0.0.1.a3' %}
+{% set rpm_release = '1' %}
 Name:           {{ py2name('Bareon') }}
-Version:        0.0.1~a3
-Release:        0
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack bareon tool
 License:        {{ license('Apache-2.0') }}
 Group:          System/Management
