--- a/openstack/gnocchiclient/gnocchiclient.spec.j2
+++ b/openstack/gnocchiclient/gnocchiclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname gnocchiclient
 Name:           {{ py2name('gnocchiclient') }}
-Version:        2.6.0
+Version:        2.8.2
 Release:        0
 Summary:        Python API and CLI for OpenStack Gnocchi
 License:        {{ license('Apache-2.0') }}
@@ -10,6 +10,7 @@ Source0:        https://pypi.io/packages/source/g/%{sname}/%{sname}-%{version}.t
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('futurist') }}
+BuildRequires:  {{ py2pkg('keystoneauth1') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('pyparsing') }}
