--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -17,6 +17,7 @@ BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('debtcollector') }}
 Requires:       {{ py2pkg('fixtures') }}
 Requires:       {{ py2pkg('mock') }}
 Requires:       {{ py2pkg('mox3') }}
