--- a/openstack/XStatic-Angular-Bootstrap/XStatic-Angular-Bootstrap.spec.j2
+++ b/openstack/XStatic-Angular-Bootstrap/XStatic-Angular-Bootstrap.spec.j2
@@ -1,13 +1,12 @@
 %global sname XStatic-Angular-Bootstrap
 Name:           {{ py2name('XStatic-Angular-Bootstrap') }}
-Version:        0.11.0.8
+Version:        2.2.0.0
 Release:        0
 Summary:        Angular-Bootstrap %{version} (XStatic packaging standard)
 License:        {{ license('MIT') }}
 Group:          Development/Languages/Python
 Url:            https://git.openstack.org/cgit/openstack/xstatic-angular-bootstrap/
 Source0:        https://pypi.io/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
-Patch0:         no-wheel.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
@@ -31,5 +30,6 @@ Angular-Bootstrap JavaScript library packaged for setuptools (easy_install) / pi
 %doc README.txt
 %{python2_sitelib}/xstatic
 %{python2_sitelib}/XStatic_Angular_Bootstrap-*.egg-info
+%{python2_sitelib}/*-nspkg.pth
 
 %changelog
