Don't package AUTHORS as doc
we decided on that at some point, see
https://wiki.openstack.org/wiki/Rpm-packaging/ReviewGuidelines

Change-Id: I814aa874e69082baedc5f1a76e598ac89f22971d

--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -85,7 +85,7 @@ rm -rf html/.{doctrees,buildinfo}
 %{__python2} setup.py testr
 
 %files
-%doc AUTHORS README.rst ChangeLog
+%doc README.rst ChangeLog
 %license LICENSE
 %{python2_sitelib}/glance_store*
 %{python2_sitelib}/*.egg-info
