--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -74,7 +74,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %files
 %license LICENSE
-%doc AUTHORS ChangeLog README.rst
+%doc ChangeLog README.rst
 %{python2_sitelib}/%{sname}
 %{python2_sitelib}/*.egg-info
 
