--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -75,7 +75,7 @@ testr init && testr run
 
 %files
 %license LICENSE
-%doc README.rst AUTHORS
+%doc README.rst
 %{python2_sitelib}/os_client_config
 %{python2_sitelib}/*.egg-info
 
