--- a/openstack/os-cloud-config/os-cloud-config.spec.j2
+++ b/openstack/os-cloud-config/os-cloud-config.spec.j2
@@ -75,7 +75,7 @@ testr init && testr run
 
 %files
 %license LICENSE
-%doc README.rst AUTHORS
+%doc README.rst
 %{_bindir}/generate-keystone-pki
 %{_bindir}/init-keystone
 %{_bindir}/init-keystone-heat-domain
