--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -53,7 +53,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %files
 %license LICENSE
-%doc README.rst AUTHORS
+%doc README.rst
 %{python2_sitelib}/oslo_context
 %{python2_sitelib}/*.egg-info
 
