--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -49,7 +49,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{__python2} setup.py test
 
 %files
-%doc AUTHORS ChangeLog CONTRIBUTING.rst README.rst
+%doc ChangeLog CONTRIBUTING.rst README.rst
 %license LICENSE
 %{python2_sitelib}/oslo_i18n
 %{python2_sitelib}/*.egg-info
