--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -57,7 +57,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %files
 %license LICENSE
-%doc README.rst AUTHORS ChangeLog
+%doc README.rst ChangeLog
 %{python2_sitelib}/oslo_serialization
 %{python2_sitelib}/*.egg-info
 
