--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -68,7 +68,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %files
 %license LICENSE
-%doc AUTHORS ChangeLog README.rst
+%doc ChangeLog README.rst
 %{python2_sitelib}/oslo_utils
 %{python2_sitelib}/*.egg-info
 
