--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -70,7 +70,7 @@ This package contains documentation files for %{name}.
 
 %files
 %license LICENSE
-%doc README.rst ChangeLog AUTHORS
+%doc README.rst ChangeLog
 %{python2_sitelib}/*
 
 %files doc
