--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -47,7 +47,7 @@ better support for mocking results.
 
 %files
 %license LICENSE
-%doc ChangeLog README.rst AUTHORS
+%doc ChangeLog README.rst
 %{_bindir}/oslo_debug_helper
 %{_bindir}/oslo_run_cross_tests
 %{_bindir}/oslo_run_pre_release_tests
