--- a/openstack/tempest-lib/tempest-lib.spec.j2
+++ b/openstack/tempest-lib/tempest-lib.spec.j2
@@ -55,7 +55,7 @@ rm %{buildroot}/%{_bindir}/check-uuid
 %files
 %defattr(-,root,root,-)
 %license LICENSE
-%doc README.rst ChangeLog AUTHORS
+%doc README.rst ChangeLog
 %{python2_sitelib}/tempest_lib
 %{python2_sitelib}/*.egg-info
 
