--- a/openstack/yaql/yaql.spec.j2
+++ b/openstack/yaql/yaql.spec.j2
@@ -49,7 +49,7 @@ written in python and is distributed via PyPI.
 
 %files
 %license LICENSE
-%doc ChangeLog README.rst AUTHORS
+%doc ChangeLog README.rst
 %{_bindir}/yaql
 %{python2_sitelib}/%{sname}
 %{python2_sitelib}/%{sname}*.egg-info
