--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -65,7 +65,7 @@ install -p -D -m 644 doc/build/man/os-win.1 %{buildroot}/%{_mandir}/man1/os-win.
 %{__python2} setup.py test
 
 %files
-%doc AUTHORS README.rst ChangeLog
+%doc README.rst ChangeLog
 %license LICENSE
 %{python2_sitelib}/os_win*
 %{python2_sitelib}/*.egg-info
