--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -31,7 +31,7 @@ layer of Sphinx plugins.
 %{py2_install}
 
 %files
-%doc README.rst AUTHORS
+%doc README.rst
 %license LICENSE
 %{python2_sitelib}/%{sname}
 %{python2_sitelib}/*.egg-info
