--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -69,7 +69,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{__python2} setup.py testr
 
 %files
-%doc README.rst AUTHORS ChangeLog
+%doc README.rst ChangeLog
 %license LICENSE
 %{python2_sitelib}/tripleo_common
 %{python2_sitelib}/*.egg-info
