Update python-neutronclient to 6.1.0
Change-Id: Idc07c60abf491a8744174105bc7fb10088b39ef9

--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-neutronclient') }}
-Version:        6.0.0
+Version:        6.1.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Neutron
 License:        {{ license('Apache-2.0') }}
@@ -18,6 +18,7 @@ BuildRequires:  {{ py2pkg('python-openstackclient') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
 BuildRequires:  {{ py2pkg('osc-lib') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
@@ -36,6 +37,7 @@ Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('os-client-config') }}
 Requires:       {{ py2pkg('osc-lib') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('pbr') }}
