Update python-magnumclient to 2.4.0
Remove 0001-Add-magnum.bash_completion.patch which is now upstream.

Co-Authored-by: Thomas Bechtold <tbechtold@suse.com>
Change-Id: I5cba9842a4a3d28d864928ac11525c90c30ddcae
Depends-on: I7dfbd87afba4f6bd3e9cf698fd0b9f53cb499eb4
(cherry picked from commit e0b882019b4d33562200621ccafd765e63f009a6)

--- a/openstack/python-magnumclient/python-magnumclient.spec.j2
+++ b/openstack/python-magnumclient/python-magnumclient.spec.j2
@@ -1,12 +1,11 @@
 Name:           {{ py2name('python-magnumclient') }}
-Version:        2.3.1
+Version:        2.4.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Magnum
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/%{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
-Patch0:         0001-Add-magnum.bash_completion.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
 BuildRequires:  {{ py2pkg('cryptography') }}
@@ -20,6 +19,7 @@ BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('osprofiler') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
